# pdf-workdesk

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  sidebar.html  utils.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
assets/: sidebar.html
utils/: helpers.py  init_session_states.py  page_config.py  render_sidebar.py
