[project]
name = "pdf-workdesk"
version = "0.1.0"
description = " A Streamlit-powered application that provides a user-friendly interface for editing PDF documents. "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "pdf2docx>=0.5.8",
    "pdfplumber>=0.11.6",
    "pillow>=11.1.0",
    "pypdf[full]>=5.4.0",
    "reportlab>=4.3.1",
    "st-social-media-links>=0.1.4",
    "streamlit-pdf-viewer>=0.0.21",
]
